# zkl-wm-sol-eth

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  hardhat.config.js  jest.config.js  package.json  tsconfig.json
scripts/: alchemy-test.js  deploy.js
src/__mocks__/: ipfs-core.js
test/: wormhole.test.ts
zkl-cross-chain/client/: package.json
zkl-cross-chain/contracts/ethereum/: CrossChainMessaging.sol
zkl-cross-chain/contracts/ethereum/interfaces/: IWormhole.sol
zkl-cross-chain/contracts/solana/: Cargo.toml  devnet-deploy.json
zkl-cross-chain/contracts/solana/sdk/: babel.config.js  jest.config.js  key-registry-keypair.json  package.json  program-keypair.json
zkl-cross-chain/contracts/solana/sdk/src/: types.d.ts
zkl-cross-chain/contracts/solana/sdk/src/__mocks__/: ipfs-core.js
zkl-cross-chain/contracts/solana/sdk/src/crypto/: ecies.ts
zkl-cross-chain/contracts/solana/sdk/src/storage/: ipfs.ts
zkl-cross-chain/contracts/solana/sdk/src/types/: tweetnacl-util.d.ts  tweetnacl.d.ts
zkl-cross-chain/contracts/solana/sdk/src/utils/: ipfsValidator.ts
zkl-cross-chain/contracts/solana/sdk/src/wormhole/: test.ts  zklaArchitecture.ts
zkl-cross-chain/contracts/solana/sdk/test/: ipfsValidator.test.ts
zkl-cross-chain/contracts/solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs  wormhole.rs
zkl-cross-chain/contracts/solana/src/messaging/: mod.rs
zkl-cross-chain/sdk/: package.json  tsconfig.json
zkl-cross-chain/sdk/src/: argon2.d.ts  index.ts
zkl-cross-chain/sdk/test/: crosschain.test.ts
(+6 files in other folders)
