[package]
name = "zkl-cross-chain-solana"
version = "0.1.0"
edition = "2021"
description = "ZK-lokomotive cross chain messaging"
license = "MIT"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.17.17"
borsh = { version = "0.10.3", features = ["derive"] }
thiserror = "1.0.50"
sha2 = "0.10.8"
secp256k1 = { version = "0.28.0", features = ["global-context", "rand-std"] }
hex = "0.4.3"
arrayref = "0.3.7"
base64 = "0.21.7"
sha3 = "0.10.8"
rand = "0.8.5"
aes-gcm = "0.10.3"
generic-array = "0.14.7"

[dev-dependencies]
solana-program-test = "1.17.17"
solana-sdk = "1.17.17"
solana-client = "1.17.17"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
serde_wormhole = { path = "./serde_wormhole" }
wormhole-supported-chains = { path = "./supported-chains" }